--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script>
-            function a(){window.open("https://neuxbane.herokuapp.com")};
+            function a(){window.open("https://neuxbane.herokuapp.com",'_top')};
         </script>
     </head>
     <body onload="a()">
